--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -143,7 +143,7 @@
     
 <div class="card-group">
   <div class="card">
-    <img class="plantearth.jpg" src="..." alt="Card image cap">
+    <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -151,7 +151,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="plantearth.jpg" src="..." alt="Card image cap">
+    <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -159,7 +159,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="plantearth.jpg" src="..." alt="Card image cap">
+    <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
