--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -14,7 +14,7 @@
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="card.html">Welcom</a>
+                    <a class="nav-link text-light" href="card.html">Welcome</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="carousel.html">Serivices</a>
