--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark text-light">
+    <nav class="navbar navbar-expand-sm bg-dark text-light" style= "Center">
         <div class="container">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -216,7 +216,7 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
-    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid"></p>
+    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid"</p>
   </footer>
 </div>
    
