--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -190,7 +190,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top" style="width:50%">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Samantha Plamer</h5>
         <p class="card-text">CEO</p>
@@ -201,7 +201,7 @@
 
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" style="width:50%">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Jose Lopez</h5>
         <p class="card-text">Commmunity Outreach Coordinator</p>
@@ -210,7 +210,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" class="card-img-top" style="width:50%">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" class="card-img-top">
       <div class="card-body">
         <h5 class="card-title">Jackie Smith</h5>
         <p class="card-text">Head Cook</p>
