--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -218,6 +218,30 @@
     </div>
   </div>
   
+	
+	
+	
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" height="50" width="50">        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" height="50" width="50">
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+</div>	
+	
+	
 <br>
 <br>
 <br>
