--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -185,47 +185,7 @@
   </div>
 </div>
    
-     
-     
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top" height="50" width="75">
-      <div class="card-body">
-        <h5 class="card-title">Samantha Plamer</h5>
-        <p class="card-text">CEO</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <div class="col">
-    <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" height="50" width="50">
-      <div class="card-body">
-        <h5 class="card-title">Jose Lopez</h5>
-        <p class="card-text">Commmunity Outreach Coordinator</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" class="card-img-top" height="50" width="75">
-      <div class="card-body">
-        <h5 class="card-title">Jackie Smith</h5>
-        <p class="card-text">Head Cook</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="https://image.shutterstock.com/image-photo/stock-photo-headshot-portrait-of-happy-millennial-man-in-casual-clothes-isolated-on-grey-studio-background-250nw-1548802709.jpg" class="card-img-top" height="50" width="75">
-      <div class="card-body">
-        <h5 class="card-title">Jackie Smith</h5>
-        <p class="card-text">Head Cook</p>
-      </div>
-    </div>
-  </div>  
+ 
 	
 	
 	
@@ -263,12 +223,12 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU">        
+	<img src="https://t3.ftcdn.net/jpg/02/22/85/16/360_F_222851624_jfoMGbJxwRi5AWGdPgXKSABMnzCQo9RN.jpg">        
 	      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-  </div>		
+  </div>	
 	
 <br>
 <br>
