--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -219,16 +219,16 @@
       </div>
     </div>
   </div>	
-<div class="row">
-  <div class="col-sm-6">
+ <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-	<img src="https://t3.ftcdn.net/jpg/02/22/85/16/360_F_222851624_jfoMGbJxwRi5AWGdPgXKSABMnzCQo9RN.jpg">        
-	      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU">
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-  </div>	
+  </div>
+</div>
 	
 <br>
 <br>
