--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -194,8 +194,8 @@
     <div class="card">
       <div class="card-body">
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU">        
-	      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+	      <p class="card-text">Samantha Jones - CEO</p>
+        <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
   </div>
@@ -203,8 +203,8 @@
     <div class="card">
       <div class="card-body">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU">
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text">Samantha Jones - Outreach Coordinator</p>
+        <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
   </div>
@@ -214,17 +214,17 @@
     <div class="card">
       <div class="card-body">
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU">        
-	      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+	      <p class="card-text">John Richards - Head Cook</p>
+        <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
   </div>	
  <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-      <img src="https://media.istockphoto.com/photos/portrait-concept-picture-id1016761216?k=20&m=1016761216&s=612x612&w=0&h=jEC8voGLjSyhdOO7EMQyrLtZ9m--TEUmd4X56sqyZk0=">
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGUHCtPmCmg0bzFZgEPSMIniAHpjWPDXWjmceVoNUSUfhJW9F9Jvcm0-ZhKNezS-rP9kU&usqp=CAU">
+        <p class="card-text">John Richards - Volunteer Coordinator</p>
+        <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
   </div>
