--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -8,6 +8,30 @@
     <title>My Profile Page</title>
 </head>
 
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
+    <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>
+    
+    
 <body>
     <h1>Adam Schott</h1>
     <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo.<p>
