--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -60,6 +60,10 @@
         <li>Week 4 - <a href="educate.html">Project 4 - Educate Me</a> </li>
         <li>Week 5 - <a href="test.html">Project 5 - Page Testing</a> </li>
         <li>Week 6 - <a href="superhero.html">Project 6 - Superhero Gallery</a> </li>
+        <li>Week 7 - <a href="wanted.html">Project 7 - Wanted Poster</a> </li>
+        <li>Week 8 - <a href="blog.html">Project 8 - Business Blog</a> </li>
+        <li>Week 9 - <a href="nonprofit.html ">Project 9 - Non-profit Blog</a> </li>
+        <li>Week 9 - <a href="portfolio.html ">Project 10 - Portfolio</a> </li>
     </ul>
     <a href="/demo">Weekly Code Demos</a>
 </body>
