--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -2,11 +2,38 @@
 <html lang="en">
     <head>
 
-        <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <title>Page Title</title>
 
     </head>
-    <body>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
+    <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>        
+    
+    <body>     
 
         <h1>Things That Amuse Me :)</h1>
         <img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo">
