--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -37,13 +37,12 @@
 <br>    
     
 <body>
-    <h1>My Favorite Hero</h1>
-    <p>There's always a choice</p>
-    <p>Batman</p>
-=======
-    <p>"There's always a choice"</p>
-    <p> -Batman</p>
+    <div class="mt-4 p-5 bg-black text-white rounded">
+  <h1>My Favorite Hero</h1>
+  <p>"There's always a choice"</p>
+  <p> -  Batman</p>
     
     <img class="img-fluid" src="https://www.looper.com/img/gallery/heres-how-you-can-watch-every-movie-in-the-dark-knight-trilogy/intro-1610724721.jpg" alt="..."> 
+</body>
 
 </html>
