--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -37,7 +37,8 @@
 <br>    
     
 
-    <div class="mt-4 p-5 bg-black text-white rounded"</div>
+    <div class="mt-4 p-5 bg-black text-white rounded">
+    </div>
   <h1>My Favorite Hero</h1>
   <p>"There's always a choice"</p>
   <p> -  Batman</p>
