--- a/bacs200/portfolio.html
+++ b/bacs200/portfolio.html
@@ -48,7 +48,7 @@
 <br>
     <p>Projects for this class</p>
     <ul>
-        <li>Week 1 - <a href=" index.html ">Project 1 - Github Repo</a> </li>
+        <li>Week 1 - <a href=" index.html ">Project 1 - Student Profile Page</a> </li>
         <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
         <li>Week 3 - <a href="amuse.html">Project 3 - Amuse Me</a> </li>
         <li>Week 4 - <a href="educate.html">Project 4 - Educate Me</a> </li>
