--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -85,8 +85,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+          <img class="d-block w-100" src="https://media.istockphoto.com/photos/depressionsadness-loss-of-appetite-picture-id1300865703?b=1&k=20&m=1300865703&s=170667a&w=0&h=2Dw9mrZ3chceiMzFJgL8C3r3HP_j2ttu7r1XlDyqeDA=" alt="Ocean">
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
