--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -94,8 +94,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-          <img class="d-block w-100" src="https://media.istockphoto.com/photos/depressionsadness-loss-of-appetite-picture-id1300865703?b=1&k=20&m=1300865703&s=170667a&w=0&h=2Dw9mrZ3chceiMzFJgL8C3r3HP_j2ttu7r1XlDyqeDA=" alt="Ocean">
-        <div class="container">
+        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>        <div class="container">
           <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
             <p>Some representative placeholder content for the first slide of the carousel.</p>
@@ -115,7 +114,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+        <svg class="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
         <div class="container">
           <div class="carousel-caption text-end">
